--- a/examples/GoodsList/package.json
+++ b/examples/GoodsList/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "parcel-bundler": "^1.11.0"
   }
 }
