--- a/examples/GoodsList/tsconfig.json
+++ b/examples/GoodsList/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "declaration": true,
-    "lib": ["dom", "es2015", "es2016", "es2017", "es2015.iterable"]
+    "lib": ["dom", "es2015", "es2016", "es2017", "es2015.iterable"],
+    "skipLibCheck": true
   },
-  "include": ["packages/**/*.ts"],
+  "include": ["**/*.ts"],
   "exclude": ["node_modules/**/*"]
 }
