--- a/packages/axios/tsconfig.json
+++ b/packages/axios/tsconfig.json
@@ -8,6 +8,6 @@
     "declaration": true,
     "lib": ["dom", "es2015", "es2016", "es2017", "es2015.iterable"]
   },
-  "include": ["packages/**/*.ts"],
+  "include": ["**/*.ts"],
   "exclude": ["node_modules/**/*"]
 }
