--- a/packages/axios/package.json
+++ b/packages/axios/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vmojs/axios",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "",
   "main": "bundle/index.js",
   "scripts": {
@@ -14,10 +14,8 @@
   },
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0"
-  },
-  "devDependencies": {
+    "axios": "^0.18.0",
     "@vmojs/core": "^1.0.2"
   },
-  "gitHead": "97e4daa84704c771f0b851d58a64aa97954f49cf"
+  "gitHead": "da055f6bc6ff5e472f6c60002dfac359f4963564"
 }
