--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "@vmojs/core",
-  "version": "1.0.1",
+  "version": "1.0.2-1.0.5.0",
   "description": "",
   "main": "bundle/index.js",
   "scripts": {
