--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "vmo",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Frontend model",
-  "main": "index.js",
+  "main": "bundle/index.js",
   "scripts": {
+    "build": "lerna run build",
+    "publish": "lerna publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "wyy.xb@qq.com",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.18.0",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "lerna": "^3.13.1",
+    "rollup": "^1.3.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-typescript": "^1.0.0",
+    "rollup-plugin-typescript2": "^0.19.3",
+    "tslib": "^1.9.3",
     "typescript": "^3.3.3333"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
