--- a/examples/GoodsList/package.json
+++ b/examples/GoodsList/package.json
@@ -13,5 +13,8 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "parcel-bundler": "^1.11.0"
+  },
+  "dependencies": {
+    "@vmojs/axios": "^1.0.6"
   }
 }
