--- a/packages/decorator/tsconfig.json
+++ b/packages/decorator/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
     "declaration": true,
     "lib": ["dom", "es2015", "es2016", "es2017", "es2015.iterable"]
   },
