--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "version": "1.0.3",
   "description": "Frontend model",
-  "main": "bundle/index.js",
   "scripts": {
-    "build": "lerna run build",
-    "bootstrap": "lerna bootstrap",
-    "publish": "lerna publish",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "npx only-allow pnpm",
+    "dev": "pnpm -r --parallel --filter='./packages/*' run dev",
+    "test": "vitest run",
+    "prettier": "pretty-quick --staged",
+    "build": "pnpm -r --filter='./packages/*' run build",
+    "play": "pnpm -C playground run dev",
+    "prepublishOnly": "npm run test && npm run build"
   },
+  "pre-commit": [
+    "test",
+    "prettier"
+  ],
   "author": "wyy.xb@qq.com",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-typescript": "^7.3.3",
-    "lerna": "^3.13.1",
-    "rollup": "^1.3.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-typescript": "^1.0.0",
-    "rollup-plugin-typescript2": "^0.19.3",
-    "tslib": "^1.9.3",
-    "typescript": "^3.3.3333"
-  },
-  "dependencies": {
-    "axios": "^0.18.0"
+    "@types/enzyme": "^3.10.12",
+    "father": "^4.0.5",
+    "pre-commit": "^1.2.2",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
+    "vitest": "^0.23.4"
   }
 }
