--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "jsx": "react",
+    "strict": true,
     "declaration": true,
-    "lib": ["dom", "es2015", "es2016", "es2017", "es2015.iterable"]
-  },
-  "include": ["packages/**/*.ts"],
-  "exclude": ["node_modules/**/*"]
+    "skipLibCheck": true,
+    "baseUrl": "./",
+    "removeComments": false,
+    "esModuleInterop": true,
+    "noImplicitAny": false,
+    "experimentalDecorators": true,
+    "types": ["vitest/globals"],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
